[package]
name = "fatfs"
version = "0.3.6"
authors = ["Rafał Harabień <rafalh92@outlook.com>"]
repository = "https://github.com/rafalh/rust-fatfs"
readme = "README.md"
keywords = ["fat", "filesystem", "no_std"]
categories = ["filesystem"]
license = "MIT"
description = """
FAT filesystem library.
"""
exclude = [
    "resources/*",
]

[badges]
travis-ci = { repository = "rafalh/rust-fatfs" }

[features]
# Use Rust std library
std = ["byteorder/std"]
# Use dynamic allocation - required for LFN support. When used without std please enable core_io/collections
alloc = []
# Default features
default = ["std", "alloc"]

[dependencies]
byteorder = { version = ">=1.3, <1.5", default-features = false }
bitflags = "1.0"
log = ">=0.4.14, <0.4.19"

[dependencies.core_io]
git = "https://git.m-labs.hk/srenblad/rs-core_io.git"
branch = "main"
optional = true
